simple/test/features/errors/codegen/e2003_failed_build_load.spl
# E2003: Failed to Build Load

Feature: E2003 - Failed to Build Load Instruction
  As a Simple compiler
  I want to detect failures in building load instructions
  So that internal compiler errors are reported

  Background:
    Given I have the Simple compiler

  Scenario: Load instruction build failure
    When I compile with codegen:
      '''
      fn test():
        # Code that triggers load instruction failure
        val x = problematic_load()
      '''
    Then I should see error E2003
    And the error message should be "failed to build load instruction"
    And the label should indicate "codegen failed here"
    And the help should suggest "this is an internal compiler error, please report it"

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile with codegen:
      '''
      fn test():
        val x = problematic_load()
      '''
    Then I should see error E2003
    And the error message should contain "로드 명령 빌드 실패"
